# nonebot-plugin-nobot-here

./: README.md  pyproject.toml
src/nonebot_plugin_nobot_here/: __init__.py  config.py  data_manager.py  matcher.py  message_handle_utils.py  random_reply.json
